src/app.css
@import 'tailwindcss';
@plugin '@iconify/tailwind4';

body {
	font-family:
		system-ui,
		-apple-system,
		BlinkMacSystemFont,
		'Segoe UI',
		Roboto,
		Oxygen,
		Ubuntu,
		Cantarell,
		'Open Sans',
		'Helvetica Neue',
		sans-serif;
}

@layer base {
	* {
		transition:
			background-color 0.2s ease,
			border-color 0.2s ease,
			color 0.2s ease;
	}
}

@layer base {
	:root {
		--background: var(--color-neutral-50);
		--foreground: var(--color-neutral-100);
		--border: var(--color-neutral-300);
		--text: var(--color-black);
	}

	.dark {
		--background: var(--color-gray-950);
		--foreground: var(--color-gray-900);
		--border: var(--color-gray-800);
		--text: var(--color-white);
	}
}

@theme inline {
	--color-bg: var(--background);
	--color-fg: var(--foreground);
	--color-border: var(--border);
	--color-text: var(--text);
}

@theme {
	--animate-marquee: marquee var(--animation-duration, 20s) linear infinite;

	@keyframes marquee {
		0% {
			transform: translateX(0);
		}
		100% {
			transform: translateX(-50%);
		}
	}
}

